--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Home Work 7</title>
     <script src="functions.js" defer></script>
+    <script src="main.js" defer></script>
    
     
 </head>
