--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Home Work 7</title>
     <script src="functions.js" defer></script>
     <script src="main.js" defer></script>
-   
-    
+
 </head>
 <body>
-    
+    <h1>HOME WORK - 7</h1> 
 </body>
 </html>
